# block-game

./: .gitignore  BuildString.cmake  CMakeLists.txt  README.md
include/block_game/game/: block.h  block_vertex.h  game.h  grid.h  world.h
include/block_game/general/: camera.h  matrix.h  vector.h
include/block_game/opengl/: buffer.h  program.h
include/game/: block.h  game.h  grid.h  world.h
include/general/: camera.h  math.h  matrix.h  vector.h
include/opengl/: buffer.h  program.h
res/: CMakeLists.txt
res/game/: CMakeLists.txt
res/shader/: CMakeLists.txt  program.frag  program.vert
src/: BlockGame.cpp  CMakeLists.txt  block.cpp  block.h  color_3d.cpp  color_3d.h  main.cc  main.cpp  vector_3d.cpp  vector_3d.h  world.cpp  world.h
src/game/: CMakeLists.txt  block.cc  block.cpp  block.h  block_vertex.cc  block_vertex.cpp  block_vertex.h  game.cc  game.cpp  grid.cc  grid.cpp  grid.h  world.cc  world.cpp  world.h  world.json
src/general/: CMakeLists.txt  camera.cc  camera.cpp  camera.h  color_3d.cpp  color_3d.h  color_3f.cpp  color_3f.h  math.cc  math.cpp  math.h  matrix.h  matrix_3f.cpp  matrix_3f.h  matrix_4f.cpp  matrix_4f.h  vector.h  vector_2f.cpp  vector_2f.h  vector_3d.cpp  vector_3d.h  vector_3f.cpp  vector_3f.h
src/opengl/: CMakeLists.txt  buffer.cc  buffer.cpp  buffer.h  index_buffer.cpp  index_buffer.h  program.cc  program.cpp  program.h  shader.cpp  shader.h  vertex_attribute.cc  vertex_attribute.cpp  vertex_attribute.h  vertex_buffer.cpp  vertex_buffer.h
src/shader/: CMakeLists.txt  fragment.cpp  fragment.h  program.frag  program.vert  shaders.cc  shaders.cpp  shaders.h  vertex.cpp  vertex.h
test/: CMakeLists.txt
test/game/: CMakeLists.txt
test/general/: CMakeLists.txt  matrix_test.cc  vector_test.cc
test/opengl/: CMakeLists.txt
